[package]
name = "argonone"
version = "0.1.0"
authors = ["Tony Fettes <feihaoxiang2014@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
toml = "0.4.2"
serde = { version = "1.0.117", features = ["derive"] }

